# VideoApp

./: Build.bat  CMakeLists.txt  InitProject.bat  InitProject.sh  README.md
Source/: main.cpp
